fix: remove top from container to align better with navbar and footer

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -50,7 +50,6 @@
 .contained {
     overflow-y: scroll;
     position: relative;
-    top: 75px;
     scrollbar-width: none;
     height: 90vh;
 }
@@ -78,18 +77,4 @@
     justify-content: center;
 }
 
-.footer {
-}
-
-.rightfooter {
-    position: relative;
-    margin-left: 150px;
-    min-width: 125px;
-    font-size: 14px;
-}
-
-.leftfooter {
-    min-width: 125px;
-    font-size: 14px;
-    position: relative;
-}
+.footer {}
